# ftf

./: .gitignore  Cargo.toml  README.md  SYNTAX.md
.github/workflows/: build_test_fmt.yml
src/: args.rs  assert.rs  error.rs  exp_got.rs  expected.rs  input.rs  launcher.rs  lib.rs  log.rs  main.rs  output.rs  scheduler.rs
src/yaml/: mod.rs
tests/: ft_for_ft.yml
tests/fixtures/yaml/: echo.yaml  echo_extra_args.yaml  invalid_echo.yaml
