[package]
name = "ft"
version = "0.1.0"
authors = ["cohenarthur <arthur.cohen@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
wait-timeout = "0.2"
colored = "2.0"
