[package]
name = "ftf"
version = "0.3.0"
authors = ["cohenarthur <arthur.cohen@epita.fr>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Run functional tests from a variety of formats"
repository = "https://github.com/cohenarthur/ftf"
keywords = ["tests", "yaml", "functional"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
wait-timeout = "0.2"
colored = "2.0"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.5"
